--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
    <script type="text/javascript" src="../js/index.js"></script>
    <script>
     var adr = '<%=host%>:<%=port%>';
-    var socket = io.connect('localhost:<%=port%>');
+    var socket = io.connect(adr);
     console.log(adr);
     socket.on('greeting', function(data){
      alert(data);
