--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
    
 </head>
 <body>
-  <div class="chat_window">
+ <div class="chat_window" style="margin-top: 100px">
    <div class="top_menu">
       <div class="buttons">
          <div class="button close"></div>
@@ -44,5 +44,55 @@
    </li>
 </div>
 
+<table class="table" id ="tbInformation" style="border: 1px">
+   <tr>
+      <th>Account number</th>
+      <th>Password</th>
+      <th>Full name</th>
+      <th>Phone number</th>
+   </tr>
+   <tr>
+
+      <th>0011000708653</th>
+      <th>1</th>
+      <th>Nguyen Van A</th>
+      <th>+841264793929</th>
+   </tr>
+   <tr>
+
+      <th>0011000708654</th>
+      <th>1</th>
+      <th>Tran Van B</th>
+      <th>+841264793929</th>
+   </tr>
+   <tr>
+
+      <th>0011000708655</th>
+      <th>1</th>
+      <th>Thai Thi C</th>
+      <th>+841264793929</th>
+   </tr>
+   <tr>
+
+      <th>0011000708656</th>
+      <th>1</th>
+      <th>Le Van D</th>
+      <th>+841264793929</th>
+   </tr>
+   <tr>
+
+      <th>0011000708657</th>
+      <th>1</th>
+      <th>Ly Thi E</th>
+      <th>+841264793929</th>
+   </tr>
+   <tr>
+
+      <th>0011000708658</th>
+      <th>1</th>
+      <th>Do Van F</th>
+      <th>+841264793929</th>
+   </tr>
+</table>
 </body>
 </html>
